Actualització part websockets amb swagger i total de vots
